# src/routes/worker.routes.js
@@ -1,6 +1,7 @@
 const express = require('express');
 const router = express.Router();
 const { requireFields } = require('../middlewares/validate');
+const upload = require('../middlewares/upload');
 const {
   getAllWorkers,
   createWorker,
@@ -8,6 +9,8 @@ const {
   updateWorker,
   deleteWorker,
   getWorkerByCard,
+  uploadWorkerPhoto,
+  deleteWorkerPhoto,
 } = require('../controllers/worker.controller');
 
 // Card lookup must be defined BEFORE /:id to avoid "card" being parsed as an ID
@@ -18,5 +21,7 @@ router.post('/', requireFields(['full_name', 'rfid_card_uid', 'role_id']), creat
 router.get('/:id', getWorkerById);
 router.put('/:id', updateWorker);
 router.delete('/:id', deleteWorker);
+router.post('/:id/photo', upload.single('photo'), uploadWorkerPhoto);
+router.delete('/:id/photo', deleteWorkerPhoto);
 
 module.exports = router;
